--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -6,11 +6,10 @@
     android:layout_alignParentTop="true" >
 
     <android.support.v4.view.ViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/nowplaying" >
+        android:layout_above="@+id/nowPlayingToggle" >
 
         <android.support.v4.view.PagerTabStrip
             android:id="@+id/pager_title_strip"
@@ -22,6 +21,14 @@
             android:paddingTop="5dp"
             android:textColor="#fff" />
     </android.support.v4.view.ViewPager>
+
+    <ImageButton
+        android:id="@+id/nowPlayingToggle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arrowsdown"
+        android:layout_above="@+id/nowplaying"
+        android:layout_alignWithParentIfMissing="true" />
 
     <fragment
         android:id="@+id/nowplaying"
