--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -5,31 +5,39 @@
     android:layout_height="match_parent"
     android:layout_alignParentTop="true" >
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/content"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/nowPlayingToggle" >
-
-        <android.support.v4.view.PagerTabStrip
-            android:id="@+id/pager_title_strip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="#000"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:textColor="#fff" />
-    </android.support.v4.view.ViewPager>
-
-    <ImageButton
-        android:id="@+id/nowPlayingToggle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/arrowsdown"
         android:layout_above="@+id/nowplaying"
         android:layout_alignWithParentIfMissing="true"
-        android:background="@color/Black" />
+        android:orientation="vertical" >
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <android.support.v4.view.PagerTabStrip
+                android:id="@+id/pager_title_strip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:background="#000"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:textColor="#fff" />
+        </android.support.v4.view.ViewPager>
+
+        <ImageButton
+            android:id="@+id/nowPlayingToggle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
+            android:src="@drawable/arrowsdown"
+            android:layout_alignParentBottom="true" />
+
+    </RelativeLayout>
 
     <fragment
         android:id="@+id/nowplaying"
