--- a/ZezoMusicPlayer/res/layout/queue.xml
+++ b/ZezoMusicPlayer/res/layout/queue.xml
@@ -1,16 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:background="#000000"
     android:orientation="vertical"
-    android:background="@color/Black"
-    android:padding="5dp" >
- 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    android:windowSoftInputMode="adjustPan"
+    android:paddingTop="5dp" >
+
+    <ListView
+        android:id="@+id/song_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="Next update: queue manager."/>
- 
+        android:choiceMode="singleChoice"
+        android:clickable="false"
+        android:fastScrollAlwaysVisible="true"
+        android:fastScrollEnabled="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:listSelector="#660000" >
+    </ListView>
+
 </LinearLayout>
