--- a/ZezoMusicPlayer/res/layout/queue.xml
+++ b/ZezoMusicPlayer/res/layout/queue.xml
@@ -11,7 +11,7 @@
         android:id="@+id/song_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:choiceMode="singleChoice"
+        android:choiceMode="none"
         android:clickable="false"
         android:fastScrollAlwaysVisible="true"
         android:fastScrollEnabled="true"
