--- a/ZezoMusicPlayer/res/menu/playlist.xml
+++ b/ZezoMusicPlayer/res/menu/playlist.xml
@@ -2,7 +2,7 @@
     xmlns:zezo="http://schemas.android.com/apk/res-auto" >
     
     <item     
-        android:id="@+id/grid_default_search"
+        android:id="@+id/search"
         android:icon="@drawable/magnifierwhite40"
         android:title="search"
         zezo:showAsAction="always"
